# ecomm-prod-assitant

./: .gitignore  get_lib_versions.py  main.py  pyproject.toml  requirements.txt  scrapper_ui.py
.github/: copilot-instructions.md
notebook/: testing.ipynb
prod_assistant/ETL/: data_ingestion.py  data_scrapper.py
prod_assistant/config/: config.yaml
prod_assistant/mcp_servers/: client.py
prod_assistant/retriever/: retrieval.py
prod_assistant/router/: main.py
prod_assistant/utils/: model_loader.py
prod_assistant/workflow/: agentic_rag_workflow.py  agentic_workflow_with_mcp_websearch.py
